# pg_smgrstat

./: .clang-format  .clang-tidy  .gitignore  Gemfile  README.md  meson.build  pg_smgrstat.control.in  pg_smgrstat_debug.control.in
bench/: bench_runner.rb  config.yml.example
bench/lib/: bench_instance.rb  bench_pgbench.rb  bench_results.rb  bench_sysbench.rb
bench/scenarios/: default.yml  io_heavy.yml
spec/: burstiness_spec.rb  loading_spec.rb  metadata_spec.rb  metrics_spec.rb  retention_spec.rb  sequential_spec.rb  shutdown_flush_spec.rb  spec_helper.rb  temp_tables_spec.rb  timing_spec.rb
spec/support/: pg_instance.rb
sql/: pg_smgrstat--0.1.0.sql  pg_smgrstat_debug--0.1.0.sql
src/: pg_smgrstat.c  pg_smgrstat_debug.c  smgr_stats_functions.c  smgr_stats_guc.c  smgr_stats_guc.h  smgr_stats_hist.c  smgr_stats_hist.h  smgr_stats_link.c  smgr_stats_link.h  smgr_stats_metadata.c  smgr_stats_metadata.h  smgr_stats_seq.c  smgr_stats_seq.h  smgr_stats_store.c  smgr_stats_store.h  smgr_stats_welford.h  smgr_stats_worker.c  smgr_stats_worker.h
